# lego_testing

./: 2bricks_cross.ldr  5bricks_rotate.ldr  CHANGES.md  blender_render.py  block_fake.ldr  check_env.py  color_codes  color_codes.json  evaluate_model.py  generate.py  generate_combined_image.sh  generate_images.py  generate_ldr_replay_v2.py  generate_ldr_replay_v3.py  generate_ldr_replay_v4.py  generate_script.sh  get_color.py  helpers.py  lego.py  main.py  model_combine.ldr  notes  notes.md  plotly_render.html  pyproject.toml  rand_generate.py  rand_tower.py  rand_tower_fix_base.py  rand_tower_pyramid.py  simple_agent.py  simple_agent_dqn.py  simple_agent_dqn_replay.py  simple_agent_masked_ppo.py  simple_agent_masked_ppo_replay_v2.py  simple_agent_masked_ppo_v2.py  simple_agent_masked_ppo_v3.py  simple_agent_masked_ppo_v4.py  simple_agent_ppo.py  simple_agent_replay.py  simple_env.py  (+15 more)
ldr_files/: 1brick_float.ldr  7bricks_rotate.ldr  different_bricks.ldr
ldr_files/dataset/: 2blocks-perpendicular_01.ldr  2blocks-perpendicular_02.ldr  2blocks-perpendicular_05.ldr  2blocks-perpendicular_07.ldr  2blocks-perpendicular_08.ldr  2blocks-perpendicular_10.ldr  2blocks-perpendicular_12.ldr  2blocks-perpendicular_13.ldr  2blocks-perpendicular_15.ldr  2blocks-perpendicular_19.ldr  2blocks-perpendicular_20.ldr  2blocks-perpendicular_augmented180_01.ldr  2blocks-perpendicular_augmented180_02.ldr  2blocks-perpendicular_augmented180_05.ldr  2blocks-perpendicular_augmented180_08.ldr  2blocks-perpendicular_augmented180_11.ldr  2blocks-perpendicular_augmented180_14.ldr  (+1403 more)
