[project]
name = "lego-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "sb3-contrib>=2.9.0",
    "scipy>=1.16.3",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.18.0",
    "torch>=2.12.0",
]
